# DrugSWarSDL3

./: .gitignore  CMakeLists.txt  main.cpp  test_libraries.cpp
SDL_CPP/include/: SDLArgumentsStructure.hpp  SDLDeleters.hpp  SDLDesignatedInitializersStructures.hpp  SDLError.hpp  SDLFactoryFunctions.hpp  SDLGameEngineStructures.hpp  SDLResourcesAliases.hpp  SDLResourcesConcepts.hpp  SDLUtilityFunctions.hpp  SdlManager.hpp
SDL_CPP/src/: SdlManager.cpp
